fixed spacing with links

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -4,4 +4,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    .navlink {
+        margin: 0 1rem;
+    }
 }
